--- a/menu/src/main/res/layout/my_order_list_item.xml
+++ b/menu/src/main/res/layout/my_order_list_item.xml
@@ -8,7 +8,7 @@
         android:id="@+id/my_order_list_item_type_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/big_text_size"
+        android:textSize="@dimen/text_size_15"
         android:textColor="@color/text_color_gray"
         android:gravity="center"
         android:layout_weight="1"
@@ -19,7 +19,7 @@
         android:id="@+id/my_order_list_item_name_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/big_text_size"
+        android:textSize="@dimen/text_size_15"
         android:textColor="@color/text_color_gray"
         android:gravity="center"
         android:layout_weight="1"
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
-            android:textSize="@dimen/big_text_size"
+            android:textSize="@dimen/text_size_15"
             android:textColor="@color/text_color_gray"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
@@ -63,7 +63,7 @@
         android:id="@+id/my_order_list_item_price_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/big_text_size"
+        android:textSize="@dimen/text_size_15"
         android:gravity="center"
         android:textColor="@color/text_color_gray"
         android:text="0"
