--- a/menu/src/main/res/layout/activity_waiting_time.xml
+++ b/menu/src/main/res/layout/activity_waiting_time.xml
@@ -34,7 +34,7 @@
                 android:layout_alignParentRight="true"
 
                 android:text="@string/heathText"
-                android:textSize="@dimen/big_text_size"
+                android:textSize="@dimen/text_size_15"
                 android:textColor="@color/dark_gray"
                 android:onClick="goToHeathPage"/>
         </RelativeLayout>
