--- a/menu/src/main/res/layout/end_activity.xml
+++ b/menu/src/main/res/layout/end_activity.xml
@@ -78,7 +78,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/text_color_dark_gray"
-                android:textSize="@dimen/big_text_size"
+                android:textSize="@dimen/text_size_15"
                 android:text="就餐类型占比"
                 android:layout_marginTop="30dp"
                 />
@@ -108,7 +108,7 @@
                         android:layout_height="wrap_content"
                         android:text="81%"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/normal_text_size"
+                        android:textSize="@dimen/text_size_13"
                         android:layout_centerInParent="true"
                         />
                 </RelativeLayout>
@@ -117,7 +117,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="中餐占比"
-                    android:textSize="@dimen/normal_text_size"
+                    android:textSize="@dimen/text_size_13"
                     android:textColor="@color/text_color_dark_gray"
                     android:layout_marginLeft="30dp"
                     />
@@ -147,7 +147,7 @@
                         android:layout_height="wrap_content"
                         android:text="81%"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/normal_text_size"
+                        android:textSize="@dimen/text_size_13"
                         android:layout_centerInParent="true"
                         />
                 </RelativeLayout>
@@ -156,7 +156,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="日料占比"
-                    android:textSize="@dimen/normal_text_size"
+                    android:textSize="@dimen/text_size_13"
                     android:textColor="@color/text_color_dark_gray"
                     android:layout_marginLeft="30dp"
                     />
@@ -186,7 +186,7 @@
                         android:layout_height="wrap_content"
                         android:text="81%"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/normal_text_size"
+                        android:textSize="@dimen/text_size_13"
                         android:layout_centerInParent="true"
                         />
                 </RelativeLayout>
@@ -195,7 +195,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="西餐占比"
-                    android:textSize="@dimen/normal_text_size"
+                    android:textSize="@dimen/text_size_13"
                     android:textColor="@color/text_color_dark_gray"
                     android:layout_marginLeft="30dp"
                     />
@@ -230,7 +230,7 @@
                         android:layout_height="wrap_content"
                         android:text="尊敬的客人"
                         android:textColor="@color/text_color_dark_gray"
-                        android:textSize="@dimen/big_text_size"
+                        android:textSize="@dimen/text_size_15"
                         />
 
                     <TextView
@@ -238,7 +238,7 @@
                         android:layout_height="wrap_content"
                         android:text="尊敬的客人"
                         android:textColor="@color/text_color_gray"
-                        android:textSize="@dimen/normal_text_size"
+                        android:textSize="@dimen/text_size_13"
                         />
 
                     <TextView
@@ -246,7 +246,7 @@
                         android:layout_height="wrap_content"
                         android:text="尊敬的客人"
                         android:textColor="@color/text_color_dark_gray"
-                        android:textSize="@dimen/big_text_size"
+                        android:textSize="@dimen/text_size_15"
                         android:background="@mipmap/red_gradient_bg"
                         android:gravity="center"
                         />
@@ -256,14 +256,14 @@
                         android:layout_height="wrap_content"
                         android:text="尊敬的客人"
                         android:textColor="@color/text_color_gray"
-                        android:textSize="@dimen/normal_text_size"
+                        android:textSize="@dimen/text_size_13"
                         />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="尊敬的客人"
                         android:textColor="@color/text_color_dark_gray"
-                        android:textSize="@dimen/big_text_size"
+                        android:textSize="@dimen/text_size_15"
                         android:gravity="center"
                         android:background="@mipmap/red_gradient_bg"
                         />
@@ -275,7 +275,7 @@
                     android:id="@+id/end_activity_logout_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/big_text_size"
+                    android:textSize="@dimen/text_size_15"
                     android:textColor="@color/white"
                     android:background="@drawable/login_out_bg"
                     android:paddingLeft="20dp"
@@ -330,7 +330,7 @@
                     android:layout_height="wrap_content"
                     android:text="健康分析:"
                     android:textColor="@color/text_color_dark_gray"
-                    android:textSize="@dimen/big_text_size"
+                    android:textSize="@dimen/text_size_15"
                     android:layout_marginTop="5dp"
                     />
 
@@ -350,7 +350,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="@dimen/big_text_size"
+                            android:textSize="@dimen/text_size_15"
                             android:textColor="@color/text_color_dark_gray"
                             android:layout_marginLeft="20dp"
                             android:layout_marginTop="160dp"
@@ -388,7 +388,7 @@
                                     android:layout_height="wrap_content"
                                     android:text="0%"
                                     android:textColor="@color/holo_blue"
-                                    android:textSize="@dimen/big_text_size"
+                                    android:textSize="@dimen/text_size_15"
                                     />
 
                                 <LinearLayout
@@ -404,7 +404,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:textSize="@dimen/normal_text_size"
+                                    android:textSize="@dimen/text_size_13"
                                     android:textColor="@color/text_color_dark_gray"
                                     android:text="上月外出就餐"
                                     />
@@ -425,7 +425,7 @@
                                     android:layout_height="wrap_content"
                                     android:text="0%"
                                     android:textColor="@color/red"
-                                    android:textSize="@dimen/big_text_size"
+                                    android:textSize="@dimen/text_size_15"
                                     />
                                 <LinearLayout
                                     android:id="@+id/end_activity_this_month_eat_chart_ll"
@@ -443,7 +443,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:textSize="@dimen/normal_text_size"
+                                    android:textSize="@dimen/text_size_13"
                                     android:textColor="@color/text_color_dark_gray"
                                     android:layout_alignParentRight="true"
                                     android:text="本月外出就餐"
