--- a/menu/src/main/res/layout/help_toolbar.xml
+++ b/menu/src/main/res/layout/help_toolbar.xml
@@ -11,7 +11,7 @@
         android:gravity="center"
         android:text="wifi"
         android:textColor="@color/white"
-        android:textSize="@dimen/normal_text_size"
+        android:textSize="@dimen/text_size_13"
         android:drawablePadding="0px"
         android:background="@drawable/help_toolbar_item_bg"
         android:drawableTop="@mipmap/wifi_icon"
@@ -30,7 +30,7 @@
         android:text="登录"
         android:textColor="@color/white"
         android:background="@drawable/help_toolbar_item_bg"
-        android:textSize="@dimen/normal_text_size"
+        android:textSize="@dimen/text_size_13"
         />
 
 
@@ -46,6 +46,6 @@
         android:background="@drawable/help_toolbar_item_bg"
         android:text="优惠"
         android:textColor="@color/white"
-        android:textSize="@dimen/normal_text_size" />
+        android:textSize="@dimen/text_size_13" />
 
 </LinearLayout>
