--- a/menu/src/main/res/layout/login_activity.xml
+++ b/menu/src/main/res/layout/login_activity.xml
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:text="手机快捷登录"
                 android:textColor="@color/orange_color"
-                android:textSize="@dimen/big_text_size" />
+                android:textSize="@dimen/text_size_15" />
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -56,7 +56,7 @@
                     android:textColor="@color/dark_gray"
                     android:background="@drawable/login_text_field_bg"
                     android:textColorHint="@color/small_gray"
-                    android:textSize="@dimen/big_text_size"
+                    android:textSize="@dimen/text_size_15"
                     android:gravity="center"
                     />
 
@@ -73,7 +73,7 @@
                         android:layout_height="match_parent"
                         android:background="@drawable/login_text_field_bg"
                         android:hint="请输入验证码"
-                        android:textSize="@dimen/big_text_size"
+                        android:textSize="@dimen/text_size_15"
                         android:gravity="center"
                         android:maxLength="6"
                         android:textColor="@color/dark_gray"
@@ -91,7 +91,7 @@
                         android:paddingTop="3dp"
                         android:paddingBottom="3dp"
                         android:textColor="@color/dark_gray"
-                        android:textSize="@dimen/normal_text_size"
+                        android:textSize="@dimen/text_size_13"
                         android:background="@drawable/login_get_verify_code_bg"
                         android:layout_marginRight="5dp"
                         android:layout_alignParentRight="true"
@@ -111,7 +111,7 @@
                 android:id="@+id/login_activity_login_btn"
                 android:layout_width="270dp"
                 android:layout_height="50dp"
-                android:textSize="@dimen/very_big_text_size"
+                android:textSize="@dimen/text_size_20"
                 android:textColor="@color/white"
                 android:text="登录"
                 android:background="@drawable/login_btn_shape"
