--- a/menu/src/main/res/layout/main_menu_recommend_listview_item.xml
+++ b/menu/src/main/res/layout/main_menu_recommend_listview_item.xml
@@ -54,7 +54,7 @@
                         android:layout_height="wrap_content"
                         android:text="京酱肉丝"
                         android:textColor="@color/text_color_dark_gray"
-                        android:textSize="@dimen/big_text_size" />
+                        android:textSize="@dimen/text_size_15" />
 
                     <include
                         layout="@layout/modiy_order_num"
