--- a/menu/src/main/res/layout/no_eat_filter_dialog.xml
+++ b/menu/src/main/res/layout/no_eat_filter_dialog.xml
@@ -51,7 +51,7 @@
                     android:layout_height="100px"
                     android:hint="备注:填写您的其他需求"
                     android:background="@drawable/red_stroke_bg"
-                    android:textSize="@dimen/very_big_text_size"
+                    android:textSize="@dimen/text_size_20"
                     android:gravity="top"
                     android:padding="10px"
                     android:textColorHint="@color/red"
@@ -62,7 +62,7 @@
                     android:layout_width="440px"
                     android:layout_height="60px"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/very_big_text_size"
+                    android:textSize="@dimen/text_size_20"
                     android:padding="10px"
                     android:text="提交"
                     android:gravity="center"
