--- a/menu/src/main/res/layout/normal_title_bar_layout.xml
+++ b/menu/src/main/res/layout/normal_title_bar_layout.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/text_color_gray"
-            android:textSize="@dimen/biggest_text_size"
+            android:textSize="@dimen/text_size_31"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="20px"
