--- a/menu/src/main/res/layout/recommend_activity_list_menu_item.xml
+++ b/menu/src/main/res/layout/recommend_activity_list_menu_item.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:text="最佳搭配"
         android:textColor="@color/text_color_dark_gray"
-        android:textSize="@dimen/very_big_text_size"
+        android:textSize="@dimen/text_size_20"
         android:drawableLeft="@mipmap/crown"
         android:drawablePadding="10dp"
         />
@@ -52,7 +52,7 @@
                     android:layout_height="wrap_content"
                     android:text="京酱肉丝"
                     android:textColor="@color/text_color_dark_gray"
-                    android:textSize="@dimen/big_text_size" />
+                    android:textSize="@dimen/text_size_15" />
             </LinearLayout>
 
             <LinearLayout
@@ -73,7 +73,7 @@
                     android:layout_height="wrap_content"
                     android:text="1"
                     android:textColor="@color/text_color_dark_gray"
-                    android:textSize="@dimen/normal_text_size"
+                    android:textSize="@dimen/text_size_13"
                     android:paddingLeft="3dp"
                     android:paddingRight="3dp"
                     />
@@ -122,7 +122,7 @@
                     android:layout_height="wrap_content"
                     android:text="京酱肉丝"
                     android:textColor="@color/text_color_dark_gray"
-                    android:textSize="@dimen/big_text_size" />
+                    android:textSize="@dimen/text_size_15" />
             </LinearLayout>
 
             <LinearLayout
@@ -145,7 +145,7 @@
                     android:paddingLeft="3dp"
                     android:paddingRight="3dp"
                     android:textColor="@color/text_color_dark_gray"
-                    android:textSize="@dimen/normal_text_size"
+                    android:textSize="@dimen/text_size_13"
                     />
 
                 <ImageView
@@ -192,7 +192,7 @@
                     android:layout_height="wrap_content"
                     android:text="京酱肉丝"
                     android:textColor="@color/text_color_dark_gray"
-                    android:textSize="@dimen/big_text_size" />
+                    android:textSize="@dimen/text_size_15" />
             </LinearLayout>
 
             <LinearLayout
@@ -212,7 +212,7 @@
                     android:layout_height="wrap_content"
                     android:text="1"
                     android:textColor="@color/text_color_dark_gray"
-                    android:textSize="@dimen/normal_text_size"
+                    android:textSize="@dimen/text_size_13"
                     android:paddingLeft="3dp"
                     android:paddingRight="3dp"
                     />
