--- a/menu/src/main/res/layout/recommend_order_list_item.xml
+++ b/menu/src/main/res/layout/recommend_order_list_item.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="334px"
     android:gravity="center_vertical"
+    android:background="@drawable/corners_white_bg_radius_10"
+    android:padding="10px"
+
     android:orientation="horizontal">
 
     <LinearLayout
@@ -10,66 +13,61 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_weight="1"
-        android:gravity="center_horizontal"
-        >
+        android:gravity="center_horizontal">
+
         <TextView
             android:id="@+id/recommend_order_list_item_name_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
-            android:textColor="@color/white"
-            android:textSize="@dimen/very_big_text_size"
+            android:textColor="@color/text_color_gray"
+            android:textSize="@dimen/text_size_31"
             />
 
         <TextView
             android:id="@+id/recommend_order_list_item_specal_price_tv"
+            android:layout_width="215px"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20px"
+            android:text="今日"
+            android:gravity="center"
+            android:background="@drawable/corners_red_bg_radius_50"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size_31" />
+
+
+        <ImageView
+            android:layout_marginTop="20px"
+            android:id="@+id/recommend_order_list_item_company_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0"
-            android:textColor="@color/white"
-            android:textSize="@dimen/big_text_size"
+            android:src="@mipmap/ic_launcher"
             />
+
+        <include
+            android:layout_marginTop="20px"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            layout="@layout/modiy_order_num">
+
+        </include>
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/recommend_order_list_item_dishes_img_iv"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:src="@mipmap/ic_launcher"
-        />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="right|center_vertical"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-
         >
         <ImageView
-            android:id="@+id/recommend_order_list_item_reduce_iv"
-            android:layout_width="wrap_content"
+            android:id="@+id/recommend_order_list_item_dishes_img_iv"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@mipmap/reduce"
+            android:src="@mipmap/ic_launcher"
             />
+    </RelativeLayout>
 
-        <TextView
-            android:id="@+id/recommend_order_list_item_dishes_count_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0元"
-            android:textSize="@dimen/big_text_size"
-            android:textColor="@color/white"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            />
-        <ImageView
-            android:id="@+id/recommend_order_list_item_add_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/add"
-            />
-    </LinearLayout>
+
+
+
 
 </LinearLayout>
