--- a/menu/src/main/res/layout/splash_activity.xml
+++ b/menu/src/main/res/layout/splash_activity.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="盛宴时代"
-        android:textSize="@dimen/very_big_text_size"
+        android:textSize="@dimen/text_size_20"
         android:textColor="@color/white"
         />
 </LinearLayout>
