--- a/menu/src/main/res/layout/wait_time_menu_item.xml
+++ b/menu/src/main/res/layout/wait_time_menu_item.xml
@@ -9,7 +9,7 @@
         android:layout_width="170px"
         android:text="宫保鸡丁"
         android:textColor="@color/text_color_gray"
-        android:textSize="@dimen/very_big_text_size"
+        android:textSize="@dimen/text_size_20"
         android:layout_gravity="center_vertical"
         android:layout_height="wrap_content" />
 
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:text="上菜倒计时 25分钟"
             android:textColor="@color/text_color_gray"
-            android:textSize="@dimen/normal_text_size"
+            android:textSize="@dimen/text_size_13"
             />
 
         <ProgressBar
