--- a/menu/src/main/res/layout/main_menu_recommend_listview_item.xml
+++ b/menu/src/main/res/layout/main_menu_recommend_listview_item.xml
@@ -73,16 +73,21 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/main_menu_recommend_listview_item_price_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
-                        android:textColor="@color/red" />
+                        android:textColor="@color/red"
+                        android:textSize="@dimen/text_size_20"
+                        />
 
                     <TextView
+                        android:id="@+id/main_menu_recommend_listview_item_original_price_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
                         android:paddingLeft="5dp"
+                        android:textSize="@dimen/text_size_15"
                         android:textColor="@color/text_color_gray" />
                 </LinearLayout>
             </LinearLayout>
