--- a/menu/src/main/res/layout/title_bar_item.xml
+++ b/menu/src/main/res/layout/title_bar_item.xml
@@ -5,15 +5,18 @@
     android:orientation="vertical">
 <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="86px">
 
     <TextView
-        android:id="@+id/title_bar_item_content_tv"
+        android:id="@+id/title_bar_item_name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:textSize="@dimen/text_size_15"
-        />
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp" />
 
     <TextView
         android:id="@+id/title_bar_item_badge_tv"
@@ -27,6 +30,11 @@
         android:layout_marginRight="3dp"
         android:text="0"
         />
-
+        <TextView
+            android:layout_width="2dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:background="@color/title_bar_selected_color"
+            />
 </RelativeLayout>
 </LinearLayout>
