--- a/menu/src/main/res/layout/menu_item_layout.xml
+++ b/menu/src/main/res/layout/menu_item_layout.xml
@@ -38,8 +38,8 @@
 
             <ImageView
                 android:id="@+id/menu_item_layout_play_video_iv"
-                android:layout_width="50px"
-                android:layout_height="50px"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@mipmap/play"
                 />
 
