--- a/menu/src/main/res/layout/my_order_list_item.xml
+++ b/menu/src/main/res/layout/my_order_list_item.xml
@@ -12,7 +12,7 @@
         android:textColor="@color/text_color_gray"
         android:gravity="center"
         android:layout_weight="1"
-        android:text="热菜"
+        android:text=""
         />
 
     <TextView
